fix: 자바 옵션 변경 opens